# pyMesa

./: .editorconfig  .zenodo.json  0001-Build-shared-libs.patch  CITATION  MANIFEST.in  README.md  chem.py  codemeta.json  colors.py  const.py  crlibm.py  eos.py  kap.py  mesa-setup.sh  net.py  neu.py  pyMesaUtils.py  pydfriddr.py  pydfriddr_kap.py  pydfriddr_net.py  pydfriddr_net_comp.py  pydfriddr_neu.py  pyproject.toml  rates.py  requirements.txt  run_test.sh  setup.cfg  setup.py  utils.py
.github/: dependabot.yml
.github/workflows/: pypi.yml  zizmor.yml
mesa_models/: atm.py  chem.py  colors.py  const.py  eos.py  ion.py  kap.py  net.py  neu.py  rates.py  star.py  utils.py
patches/: 0001-Build-shared-libraries.patch  0001-build-shared-libs-10000.patch  0001-build-shared-libs-10108.patch  0001-build-shared-libs-10398.patch  0001-turn-shared-on.patch  0002-bug-fixes.patch  0002-build-crlibm-10000.patch  0002-build-crlibm-10108.patch  0002-build-crlibm-10398.patch  0003-crlibm-shared-library.patch  0003-sdk-with-lapack-10000.patch  0004-sdk-with-lapack.patch  mesa-r9793.patch
pyMesa/: __init__.py  pyMesaUtils.py  pyMesaUtils_2026.py  pyMesaUtils_pre2026.py  version.py
pydfriddr/: pydfriddr_kap.py  pydfriddr_neu.py  pydfriddr_rates.py  pydfriddr_screen.py
pymesa/: __init__.py  atm.py  chem.py  colors.py  const.py  crlibm.py  eos.py  gyre.py  ion.py  kap.py  math.py  mesa_versions.txt  mesasdk_linux.txt  mesasdk_mac.txt  net.py  neu.py  pyMesaUtils.py  rates.py  star.py  tester.py  utils.py
pymesa/pydfriddr/: pydfriddr_rates.py  pydfriddr_screen.py
tests/: atm_test.py  binary_test.py  chem_test.py  colors_test.py  const_test.py  eos_test.py  gyre_test.py  ion_test.py  kap_test.py  math_test.py  net_test.py  neu_test.py  rates_test.py  star_test.py  utils_test.py
