[build-system]
requires = ["setuptools>=82", "wheel", "setuptools_scm[toml]>=10.0.0"]

build-backend = "setuptools.build_meta"

[project]
name = "pyMesa"
description = "Python bindings for MESA (Modules for Experiments in Stellar Astrophysics)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
authors = [
	{ name = "Robert Farmer", email = "robert.j.farmer37@gmail.com" }
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
	"gfort2py>=3.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rjfarmer/pyMesa"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyMesa*"]

[tool.setuptools_scm]


