[metadata]
name = pyMesa
description = "Python bindings for MESA (Modules for Experiments in Stellar Astrophysics)"
long_description = file: README.md
long_description_content_type = text/markdown
author = Robert Farmer
author_email = robert.j.farmer37@gmail.com
url = https://github.com/rjfarmer/pyMesa
license = GPLv2+
license_files = COPYING.txt
platforms = unix, linux, osx

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.7
zip_safe = False
packages=find:
include_package_data = true
